--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
     </p>
     </div>
     <h2>Audi</h2>    
-    <div class="Audi"><a href="file:///C:/Users/37544/Desktop/home%20work%20%E2%84%961/index.html"> <img src="./photo/luxfon.com-39356.jpg"></a></div>
+    <div class="Audi"><a href="./index.html"> <img src="./photo/luxfon.com-39356.jpg"></a></div>
     <p><span>©</span> Karawy N.A.</p>
 </body>
 </html>
