--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css/style.css">
 </head>
 <body>
- <h1> Я, <a href="file:///C:/Users/37544/Desktop/home%20work%20%E2%84%961/index2.html"> Каравый Николай Анатольевич</a>, изучаю <span>HTML</span>, CSS и JS.</h1>
+ <h1> Я, <a href="index2.html"> Каравый Николай Анатольевич</a>, изучаю <span>HTML</span>, CSS и JS.</h1>
  <h2>Текст</h2>
  <h3>Текст 1</h3>
  <p><font size="5" color="red" face="Arial">Биржа копирайтинга <span>Text.ru</span> — это достойный
